syntax = "proto3";

package notification.v1;

option go_package = "github.com/granula/shared/gen/notification/v1;notificationv1";

import "common/v1/common.proto";

// NotificationService - сервис уведомлений
service NotificationService {
  // Отправить уведомление
  rpc SendNotification(SendNotificationRequest) returns (SendNotificationResponse);
  
  // Получить уведомления
  rpc GetNotifications(GetNotificationsRequest) returns (GetNotificationsResponse);
  
  // Отметить прочитанным
  rpc MarkAsRead(MarkAsReadRequest) returns (MarkAsReadResponse);
  
  // Количество непрочитанных
  rpc GetUnreadCount(GetUnreadCountRequest) returns (GetUnreadCountResponse);
  
  // Отправить email
  rpc SendEmail(SendEmailRequest) returns (SendEmailResponse);
}

// SendNotificationRequest - запрос отправки уведомления
message SendNotificationRequest {
  string user_id = 1;
  string type = 2;
  string title = 3;
  string message = 4;
  map<string, string> data = 5;
}

// SendNotificationResponse - ответ отправки уведомления
message SendNotificationResponse {
  string notification_id = 1;
}

// GetNotificationsRequest - запрос получения уведомлений
message GetNotificationsRequest {
  string user_id = 1;
  bool unread_only = 2;
  common.v1.Pagination pagination = 3;
}

// GetNotificationsResponse - ответ получения уведомлений
message GetNotificationsResponse {
  repeated Notification notifications = 1;
  common.v1.Pagination pagination = 2;
}

// MarkAsReadRequest - запрос отметки прочитанным
message MarkAsReadRequest {
  string notification_id = 1;
}

// MarkAsReadResponse - ответ отметки прочитанным
message MarkAsReadResponse {
  bool success = 1;
}

// GetUnreadCountRequest - запрос количества непрочитанных
message GetUnreadCountRequest {
  string user_id = 1;
}

// GetUnreadCountResponse - ответ количества непрочитанных
message GetUnreadCountResponse {
  int32 count = 1;
}

// SendEmailRequest - запрос отправки email
message SendEmailRequest {
  string to = 1;
  string subject = 2;
  string body = 3;
  string template = 4;
  map<string, string> template_data = 5;
}

// SendEmailResponse - ответ отправки email
message SendEmailResponse {
  bool success = 1;
}

// Notification - модель уведомления
message Notification {
  string id = 1;
  string user_id = 2;
  string type = 3;
  string title = 4;
  string message = 5;
  bool read = 6;
  map<string, string> data = 7;
  int64 created_at = 8;
}

